[gd_scene load_steps=16 format=2]

[ext_resource path="res://Escenas/Interfaz de usuario.gd" type="Script" id=1]
[ext_resource path="res://Escenas/Parrallax principal.tscn" type="PackedScene" id=2]
[ext_resource path="res://Recursos/Imagenes/boton normal.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Imagenes/boton click.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Imagenes/boton hover.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Font/DancingScript-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Recursos/Imagenes/conejo_cafe_brincar.png" type="Texture" id=7]
[ext_resource path="res://Escenas/Animacion de conejos menu.gd" type="Script" id=8]
[ext_resource path="res://Recursos/Imagenes/ground_grass.png" type="Texture" id=9]
[ext_resource path="res://Recursos/Imagenes/ground_cake.png" type="Texture" id=10]
[ext_resource path="res://Recursos/Imagenes/conejo_rosa_brincar.png" type="Texture" id=11]
[ext_resource path="res://Escenas/Animacion de conejos menu 2.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
resource_name = "Brincar"
length = 2.0
loop = true
step = 500.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 91.593, 645 ), Vector2( 91.593, 645 ), Vector2( 91.593, 569 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Brincar"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 426.285, 365 ), Vector2( 426.285, 365 ), Vector2( 426.285, 289 ) ]
}

[node name="Interfaz de usuario" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Parrallax principal" parent="." instance=ExtResource( 2 )]

[node name="Contenedor vertical" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -130.0
margin_top = 14.0
margin_right = 130.0
margin_bottom = 362.0
rect_min_size = Vector2( 250, 330 )
__meta__ = {
"_edit_group_": true
}

[node name="TextureButton" type="TextureButton" parent="Contenedor vertical"]
editor/display_folded = true
margin_right = 260.0
margin_bottom = 90.0
rect_min_size = Vector2( 250, 90 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Contenedor vertical/TextureButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -45.0
margin_right = 131.5
margin_bottom = 45.0
rect_min_size = Vector2( 250, 90 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.27451, 0.52549, 0.733333, 1 )
text = "Jugar"
align = 1

[node name="TextureButton2" type="TextureButton" parent="Contenedor vertical"]
editor/display_folded = true
margin_top = 94.0
margin_right = 260.0
margin_bottom = 184.0
rect_min_size = Vector2( 250, 90 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Contenedor vertical/TextureButton2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -45.0
margin_right = 131.5
margin_bottom = 45.0
rect_min_size = Vector2( 250, 90 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.27451, 0.52549, 0.733333, 1 )
text = "Personajes"
align = 1

[node name="TextureButton3" type="TextureButton" parent="Contenedor vertical"]
margin_top = 188.0
margin_right = 260.0
margin_bottom = 278.0
rect_min_size = Vector2( 250, 90 )
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
expand = true

[node name="Label" type="Label" parent="Contenedor vertical/TextureButton3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -131.5
margin_top = -45.0
margin_right = 131.5
margin_bottom = 45.0
rect_min_size = Vector2( 250, 90 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.27451, 0.52549, 0.733333, 1 )
text = "Salir"
align = 1

[node name="Sprite 1" type="Sprite" parent="."]
position = Vector2( 91.593, 608.994 )
texture = ExtResource( 7 )
offset = Vector2( 1.37756, 26.5849 )
hframes = 3
frame = 2

[node name="Animacion" type="AnimationPlayer" parent="Sprite 1"]
anims/Brincar = SubResource( 2 )
script = ExtResource( 8 )

[node name="ground_grass" type="Sprite" parent="."]
position = Vector2( 196.217, 817.506 )
texture = ExtResource( 9 )

[node name="ground_cake" type="Sprite" parent="."]
position = Vector2( 306.458, 511.864 )
texture = ExtResource( 10 )

[node name="Sprite 2" type="Sprite" parent="."]
editor/display_folded = true
position = Vector2( 426.285, 326.262 )
texture = ExtResource( 11 )
hframes = 3
frame = 2

[node name="Animacion 2" type="AnimationPlayer" parent="Sprite 2"]
anims/Brincar = SubResource( 3 )
script = ExtResource( 12 )
[connection signal="pressed" from="Contenedor vertical/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Contenedor vertical/TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="pressed" from="Contenedor vertical/TextureButton3" to="." method="_on_TextureButton3_pressed"]
